--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FlashCards"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".FlashCards">
         <activity
             android:name=".MainActivity"
             android:exported="true">
