--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,35 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    ext{
+        // Navigation:
+        navigation_version = "2.4.1"
+        navigation_fragment_ktx = "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+        navigation_ui_ktx = "androidx.navigation:navigation-ui-ktx:$navigation_version"
+        navigation_safe_args_gradle_plugin = "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+
+        // Room database:
+        room_version = "2.4.2"
+        room = "androidx.room:room-runtime:$room_version"
+        room_compiler = "androidx.room:room-compiler:$room_version"
+        room_ktx = "androidx.room:room-ktx:$room_version" // Kotlin Extensions and Coroutines support for Room
+
+        // Scopes:
+        lifecycle_scope_version = "2.4.1"
+        lifecylce_scope = "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_scope_version" // LifecycleScope
+
+        // Koin:
+        koin_version = "3.1.5"
+        koin = "io.insert-koin:koin-android:$koin_version"
+        koin_navigation = "io.insert-koin:koin-androidx-navigation:$koin_version"
+    }
+
     dependencies {
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2'
+        classpath navigation_safe_args_gradle_plugin
     }
 }
 
